--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="row hero1">
         <div class="col-lg-6 mar">
           <h2>Hello!</h2>
-          <h3>I'm Arijit Mukherjee</h3>
+          <h3>Souhardya Das</h3>
           <h6>Fuelled by a passion of designing compelling products. I have a deep desire to learn and continuously
             improve my work.</h6>
           <h3>I am a <span style="color: crimson;" class="input"></span> </h3>
@@ -68,8 +68,8 @@
   <script>
     var Typed = new Typed(".input", {
       strings: [
-        "Frontend Developer.", "Coder.",
-        "Photographer.",
+        "Golang Developer.", "Coder.",
+        "Adventure.",
         "Painter.",
       ],
       typeSpeed: 60,
@@ -96,9 +96,8 @@
                 <li>
                   <h5>Education</h5>
                   <ul>
-                    <li>Currently pursuing B.tech in CST(UEM,Kolkata 2020-2024)</li>
-                    <li>Higher Secondary: CBSE-93.8% ,Computer Science(Kalyani Public School,Barasat 2018-2020) </li>
-                    <li>Secondary: ICSE-88.2% (St.Claret School,Barrackpore 2008-2018) </li>
+                    <li>Currently pursuing B.tech in CSE(Kolkata 2020-2024)</li>
+                    
                   </ul>
                 </li>
                 <li>
@@ -264,7 +263,7 @@
   <footer class="footer">
     <div class="footer-copyright text-center py-3">© 2023 Copyright:
       <h6>Portfolio</h6>
-      Designed with 💓: Arijit Mukherjee
+      Designed with 💓: Souhardya Das
     </div>
   </footer>
 
