--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <img src="images/safari.png" class="card-img " alt="...">
             <div class="card-img-overlay">
               <h5 class="card-title" style="color: black;">Safari</h5>
-              <p class="card-text text-center">This is the front-end of a travel website named "SAFARI". <br> <a href="https://github.com/arijit-muk02/Safari" target="#">Safari</a></p>
+              <p class="card-text text-center">This is the front-end of a travel website named "SAFARI". <br> </p>
             </div>
           </div>
         </div>
@@ -133,7 +133,7 @@
             <img src="images/shoppy.png" class="card-img" alt="...">
             <div class="card-img-overlay">
               <h5 class="card-title" style="color: black;">Shoppy</h5>
-              <p class="card-text text-center">This is the landing page of an E-commerce website named "SHOPPY". <br> <a href="https://github.com/arijit-muk02/shoppy" target="#">Shoppy</a></p>
+              <p class="card-text text-center">This is the landing page of an E-commerce website named "SHOPPY". <br> </p>
             </div>
           </div>
         </div>
@@ -142,13 +142,13 @@
             <img src="images/cnctfour.png" class="card-img" alt="...">
             <div class="card-img-overlay ">
               <h5 class="card-title" style="color: black;">Connect Four</h5>
-              <p class="card-text text-center">This is a two player game whoever connects four dots wins. <br> <a href="https://github.com/arijit-muk02/ConnectFour" target="#"> Connect Four</a> </p>
+              <p class="card-text text-center">This is a two player game whoever connects four dots wins. <br>  </p>
             </div>
           </div>
         </div>
       </div>
       <div class="moreinfo text-center">
-        <h4>For more projects visit my GitHub: <span><a href="https://github.com/arijit-muk02" target="#" style="text-decoration: none;">arijit-muk02</a></span> </h4>
+        <h4>For more projects visit my GitHub: <span><a href="https://github.com/souhardya79" target="#" style="text-decoration: none;">soudaz79</a></span> </h4>
         
       </div>
     </div>
@@ -244,7 +244,7 @@
       <div class="cmargin">
         <div class="contact-form">
           <h3 class="glow">Hire ME</h3>
-          <form action="mailto:arijitmukherjee614@gmail.com" method="post" enctype="text/plain"> 
+          <form action="mailto:dassouhardya79@gmail.com" method="post" enctype="text/plain"> 
             <label for="name">Name:</label>
             <input type="text" required="" required>
             <label for="email">Email:</label>
