--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
-      <a class="navbar-brand glow" style="font-family: 'Amita'; " href="#">@rijit</a>
+      <a class="navbar-brand glow" style="font-family: 'Amita'; " href="#">$ouhardya</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon navtog"></span>
@@ -49,15 +49,15 @@
     <div class="container">
       <div class="row hero1">
         <div class="col-lg-6 mar">
-          <h2>Hello!</h2>
+          <h2>Hello! I am</h2>
           <h3>Souhardya Das</h3>
           <h6>Fuelled by a passion of designing compelling products. I have a deep desire to learn and continuously
             improve my work.</h6>
           <h3>I am a <span style="color: crimson;" class="input"></span> </h3>
         </div>
         <div class="col-lg-6 text-center">
-          <img class="img" src="images/edu.jpg" alt=""><br>
-          <a href="https://drive.google.com/file/d/16PtXLieXEe7rIjdQvmLVXncjJPa5lJpA/view?usp=share_link"
+          <img class="img" src="images/profilepic.jpg" alt=""><br>
+          <a href="https://drive.google.com/file/d/1llad3r9790wIsqRfsbvQhcqJQ1_KUP8m/view?usp=sharing"
             target="#"><button type="button" class="btn btn-light btnpad "
               style="color: black; font-weight: bold;">Download CV</button></a>
         </div>
@@ -70,7 +70,7 @@
       strings: [
         "Golang Developer.", "Coder.",
         "Adventure.",
-        "Painter.",
+        "Traveller.",
       ],
       typeSpeed: 60,
       backSpeed: 60,
@@ -96,14 +96,14 @@
                 <li>
                   <h5>Education</h5>
                   <ul>
-                    <li>Currently pursuing B.tech in CSE(Kolkata 2020-2024)</li>
+                    <li>Currently pursuing B.tech in Computer Science Engineering(Kolkata,India 2020-2024)</li>
                     
                   </ul>
                 </li>
                 <li>
                   <h5>Experience</h5>
                   <ul>
-                    <li>Web Development Intern (Let's Grow More Aug 2021- Sep 2021)</li>
+                    <li>Software Engineering Intern(Jul 2023- present)</li>
                   </ul>
                 </li>
               </ul>
@@ -113,8 +113,8 @@
       </div>
     </div>
   </section>
-
-  <!--Projects-->
+<!--
+  Projects
   <section class="projects">
     <div class="container">
       <div class="row margin">
@@ -152,7 +152,7 @@
         
       </div>
     </div>
-    </section>
+    </section> -->
 
   <!--Skills-->
 
@@ -162,34 +162,34 @@
         <div class="col-lg-6">
           <h2 class="glow"> Skills </h2>
           <div class="smargin">
-            <h5 style="color:white;">HTML</h5>
+            <h5 style="color:white;">Java</h5>
             <div class="progress">
               <div class="progress-bar bg-success progress-bar-striped progress-bar-animated" role="progressbar"
                 aria-label="Success example" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
                 aria-valuemax="100"></div>
             </div>
-            <h5 style="color:white;">CSS</h5>
+            <h5 style="color:white;">Golang</h5>
             <div class="progress">
               <div class="progress-bar bg-info progress-bar-striped progress-bar-animated" role="progressbar"
-                aria-label="Info example" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                aria-label="Info example" style="width: 85%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
-            <h5 style="color:white;">JS</h5>
+            <h5 style="color:white;">HTML,CSS</h5>
             <div class="progress">
               <div class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar"
-                aria-label="Warning example" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+                aria-label="Warning example" style="width: 80%" aria-valuenow="50" aria-valuemin="0"
                 aria-valuemax="100"></div>
             </div>
             <h5 style="color:white;">Python</h5>
             <div class="progress">
               <div class="progress-bar bg-danger progress-bar-striped progress-bar-animated" role="progressbar"
-                aria-label="Danger example" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                aria-label="Danger example" style="width: 80%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
         </div>
         <div class="col-lg-6 certify">
-          <h3 class="text-center glow">Certificates</h3>
+     <!--    <h3 class="text-center glow">Certificates</h3>
           <div class="carmar">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-indicators">
@@ -236,7 +236,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!--Contact-->
   <section class="hire" id="me">
@@ -259,7 +259,7 @@
     </div>
   </section>
 
-  <!--footer-->
+  <!--footer
   <footer class="footer">
     <div class="footer-copyright text-center py-3">© 2023 Copyright:
       <h6>Portfolio</h6>
